--- a/www/css/style.css
+++ b/www/css/style.css
@@ -79,5 +79,12 @@ input.form-control.input-lg {
     color: #555;
     background-color: #fff;
     background-image: none;
-    border: 1px solid #fff;}
+    border: 1px solid #fff;
 	
+}
+	
+
+.navbar-collapse .nav {
+    float: right;
+}
+
